add controller ai perceive component

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -122,3 +122,6 @@ TileSetUpdateInterval=1.000000
 HeuristicScale=0.999000
 VerticalDeviationFromGroundCompensation=0.000000
 
+[/Script/GameplayDebugger.GameplayDebuggerConfig]
+ActivationKey=SpaceBar
+
