--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+GameDefaultMap=/Game/Map/TutorialMap.TutorialMap
+EditorStartupMap=/Game/Map/TutorialMap.TutorialMap
 GlobalDefaultGameMode="/Script/PeaceFulHazard.PeaceFulHazardGameMode"
 GameInstanceClass=/Game/Blueprint/System/BP_GameInstance.BP_GameInstance_C
 
