--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -18,6 +18,7 @@ r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.DefaultFeature.AutoExposure=True
+r.ReflectionCaptureResolution=64
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
