--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/TutorialMap.TutorialMap
+GameDefaultMap=/Game/Maps/MainMenu.MainMenu
 EditorStartupMap=/Game/Maps/MainMenu.MainMenu
 GlobalDefaultGameMode="/Script/PeaceFulHazard.PeaceFulHazardGameMode"
 GameInstanceClass=/Game/Blueprint/System/BP_GameInstance.BP_GameInstance_C
