get some feedback of games

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,5 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=D2DA0C2F4422B2DDBDEB39828301A8E6
 ProjectName=Third Person Game Template
+bAllowWindowResize=False
+
